@@ -20,10 +20,7 @@
         <java.version>21</java.version>
         <dockerImageName>sivaprasadreddy/${project.artifactId}:${project.version}</dockerImageName>
         <spring-modulith.version>1.4.3</spring-modulith.version>
-        <htmx-spring-boot-thymeleaf.version>4.0.1</htmx-spring-boot-thymeleaf.version>
         <datasource-micrometer-spring-boot.version>1.1.2</datasource-micrometer-spring-boot.version>
-        <bootstrap.version>5.3.7</bootstrap.version>
-        <htmx.version>2.0.6</htmx.version>
         <spotless.version>2.46.1</spotless.version>
         <palantir-java-format.version>2.72.0</palantir-java-format.version>
         <hazelcast.version>5.5.6</hazelcast.version>
@@ -145,35 +142,6 @@
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast</artifactId>
             <version>${hazelcast.version}</version>
-        </dependency>
-
-        <!-- WebApp dependencies -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>nz.net.ultraq.thymeleaf</groupId>
-            <artifactId>thymeleaf-layout-dialect</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.github.wimdeblauwe</groupId>
-            <artifactId>htmx-spring-boot-thymeleaf</artifactId>
-            <version>${htmx-spring-boot-thymeleaf.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>webjars-locator-lite</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>bootstrap</artifactId>
-            <version>${bootstrap.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars.npm</groupId>
-            <artifactId>htmx.org</artifactId>
-            <version>${htmx.version}</version>
         </dependency>
 
         <!-- OpenAPI documentation -->
@@ -365,6 +333,7 @@
                 <configuration>
                     <forkedProcessExitTimeoutInSeconds>10</forkedProcessExitTimeoutInSeconds>
                     <reportFormat>plain</reportFormat>
+                    <argLine>-Djdk.attach.allowAttachSelf=true -XX:+EnableDynamicAgentLoading</argLine>
                     <consoleOutputReporter>
                         <disable>true</disable>
                     </consoleOutputReporter>
